--- a/templates/about.html
+++ b/templates/about.html
@@ -34,7 +34,7 @@
         <i class="fas fa-bars"></i>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav ml-auto" style="margin-top: 12px;">
           <li class="nav-item">
             <a class="nav-link" href="/">Home</a>
           </li>
@@ -44,6 +44,13 @@
           
           <li class="nav-item">
             <a class="nav-link" href="/contact">Contact</a>
+          </li>
+          
+          <li class="nav-item">
+            <form class="form-inline" method="GET" action="/search" style="margin-top: -5px; margin-right: -86px;">
+              <input class="form-control mr-sm-2" name="category" type="search" placeholder="type name of category">
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form> 
           </li>
         </ul>
       </div>
@@ -72,6 +79,15 @@
         <p>Hello Eeryone, My name is krrish and I am here to solve the problem relates to technology.</p>
         <p>Not only tchnology but here you will get the problems related to accounts, cooking and many more.</p>
         <p>Also in this blog you can also post some of your opinion and if you have faced any error you can also post here</p>
+        <div class="category">
+          We have 3 categories:
+          <ul>
+            <li>technology</li>
+            <li>cooking</li>
+            <li>accounting</li>
+          </ul>
+          Note: all the categories are case sensitive write it carefully
+        </div>
       </div>
     </div>
   </div>
