--- a/templates/post.html
+++ b/templates/post.html
@@ -34,15 +34,23 @@
         <i class="fas fa-bars"></i>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav ml-auto" style="margin-top: 12px;">
           <li class="nav-item">
             <a class="nav-link" href="/">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/about">About</a>
           </li>
+          
           <li class="nav-item">
             <a class="nav-link" href="/contact">Contact</a>
+          </li>
+          
+          <li class="nav-item">
+            <form class="form-inline" method="GET" action="/search" style="margin-top: -5px; margin-right: -86px;">
+              <input class="form-control mr-sm-2" name="category" type="search" placeholder="type name of category">
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form> 
           </li>
         </ul>
       </div>
